// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="flex align-items-start gap-2"
    >
      <div
        className="p-checkbox p-component"
        id={null}
        onClick={[Function]}
        onContextMenu={null}
        onMouseDown={null}
        style={null}
      >
        <div
          className="p-hidden-accessible"
        >
          <input
            aria-labelledby={null}
            defaultChecked={false}
            disabled={false}
            id="root"
            name={null}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            required={false}
            tabIndex={null}
            type="checkbox"
          />
        </div>
        <div
          aria-checked={false}
          className="p-checkbox-box"
          role="checkbox"
        />
      </div>
      <label
        htmlFor="root"
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields checkbox field 2`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="flex align-items-start gap-2"
    >
      <div
        className="p-checkbox p-component"
        id={null}
        onClick={[Function]}
        onContextMenu={null}
        onMouseDown={null}
        style={null}
      >
        <div
          className="p-hidden-accessible"
        >
          <input
            aria-labelledby={null}
            defaultChecked={false}
            disabled={false}
            id="root"
            name={null}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={false}
            required={false}
            tabIndex={null}
            type="checkbox"
          />
        </div>
        <div
          aria-checked={false}
          className="p-checkbox-box"
          role="checkbox"
        />
      </div>
      <label
        htmlFor="root"
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <div
        className="flex gap-2"
      >
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-checkbox p-component"
            id={null}
            onClick={[Function]}
            onContextMenu={null}
            onMouseDown={null}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id="root_0"
                name={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                required={false}
                tabIndex={null}
                type="checkbox"
              />
            </div>
            <div
              aria-checked={false}
              className="p-checkbox-box"
              role="checkbox"
            />
          </div>
          <label
            htmlFor="root_0"
          >
            foo
          </label>
        </div>
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-checkbox p-component"
            id={null}
            onClick={[Function]}
            onContextMenu={null}
            onMouseDown={null}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id="root_1"
                name={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                required={false}
                tabIndex={null}
                type="checkbox"
              />
            </div>
            <div
              aria-checked={false}
              className="p-checkbox-box"
              role="checkbox"
            />
          </div>
          <label
            htmlFor="root_1"
          >
            bar
          </label>
        </div>
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-checkbox p-component"
            id={null}
            onClick={[Function]}
            onContextMenu={null}
            onMouseDown={null}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id="root_2"
                name={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                required={false}
                tabIndex={null}
                type="checkbox"
              />
            </div>
            <div
              aria-checked={false}
              className="p-checkbox-box"
              role="checkbox"
            />
          </div>
          <label
            htmlFor="root_2"
          >
            fuzz
          </label>
        </div>
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-checkbox p-component"
            id={null}
            onClick={[Function]}
            onContextMenu={null}
            onMouseDown={null}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id="root_3"
                name={null}
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                readOnly={false}
                required={false}
                tabIndex={null}
                type="checkbox"
              />
            </div>
            <div
              aria-checked={false}
              className="p-checkbox-box"
              role="checkbox"
            />
          </div>
          <label
            htmlFor="root_3"
          >
            qux
          </label>
        </div>
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <div
        className="p-colorpicker p-component p-colorpicker-overlay"
        id={null}
        style={null}
      >
        <input
          className="p-colorpicker-preview p-inputtext"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={false}
          tabIndex={null}
          type="text"
        />
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="date"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="datetime-local"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="flex flex-column gap-2"
    >
      <div
        className="d-none"
      >
        <input
          id="root_my-field"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div />
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component p-filled w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="number"
        value={0}
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="number"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <div
        className="p-password p-component p-inputwrapper"
        id={null}
        style={null}
      >
        <input
          autoFocus={false}
          className="p-inputtext p-component p-password-input"
          disabled={false}
          id="root"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          readOnly={false}
          style={null}
          type="password"
          value=""
        />
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <div
        className="flex gap-2"
      >
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-radiobutton p-component"
            id={null}
            onClick={[Function]}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id={null}
                name="root"
                onBlur={[Function]}
                onFocus={[Function]}
                required={false}
                tabIndex={null}
                type="radio"
              />
            </div>
            <div
              aria-checked={false}
              className="p-radiobutton-box"
              role="radio"
            >
              <div
                className="p-radiobutton-icon"
              />
            </div>
          </div>
          <label>
            Yes
          </label>
        </div>
        <div
          className="flex align-items-start gap-2"
        >
          <div
            className="p-radiobutton p-component"
            id={null}
            onClick={[Function]}
            style={null}
          >
            <div
              className="p-hidden-accessible"
            >
              <input
                aria-labelledby={null}
                defaultChecked={false}
                disabled={false}
                id={null}
                name="root"
                onBlur={[Function]}
                onFocus={[Function]}
                required={false}
                tabIndex={null}
                type="radio"
              />
            </div>
            <div
              aria-checked={false}
              className="p-radiobutton-box"
              role="radio"
            >
              <div
                className="p-radiobutton-icon"
              />
            </div>
          </div>
          <label>
            No
          </label>
        </div>
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="mb-2"
    >
      <div
        className="p-dropdown p-component p-inputwrapper"
        id="root"
        onClick={[Function]}
        onContextMenu={null}
        onMouseDown={null}
        style={null}
      >
        <div
          className="p-hidden-accessible"
        >
          <input
            aria-haspopup="listbox"
            aria-label={null}
            aria-labelledby={null}
            disabled={false}
            id={null}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            tabIndex={null}
            type="text"
          />
        </div>
        <div
          className="p-hidden-accessible p-dropdown-hidden-select"
        >
          <select
            aria-hidden="true"
            name={null}
            required={false}
            tabIndex={-1}
          >
            <option
              value=""
            >
              
            </option>
          </select>
        </div>
        <span
          className="p-dropdown-label p-inputtext p-dropdown-label-empty"
        >
          empty
        </span>
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          className="p-dropdown-trigger"
          role="button"
        >
          <span
            className="p-dropdown-trigger-icon p-clickable pi pi-chevron-down"
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <div
        className="p-slider p-component p-slider-horizontal"
        id="root"
        onClick={[Function]}
        style={null}
      >
        <span
          className="p-slider-range"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <span
          aria-labelledby={null}
          aria-valuemax={100}
          aria-valuemin={42}
          aria-valuenow={null}
          className="p-slider-handle"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          style={
            Object {
              "bottom": null,
              "left": "0%",
              "transition": null,
            }
          }
          tabIndex={0}
        />
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="file"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="email"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="url"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder=""
        readOnly={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <input
        autoFocus={false}
        className="p-inputtext p-component w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyPress={[Function]}
        placeholder="placeholder"
        readOnly={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div>
      <textarea
        autoFocus={false}
        className="p-inputtextarea p-inputtext p-component p-inputtextarea-resizable w-full"
        disabled={false}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyUp={[Function]}
        placeholder=""
        readOnly={false}
        rows={5}
      />
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="border-bottom-1 mb-2"
    >
      <h5>
        Titre 1
      </h5>
    </div>
    <div
      className="flex flex-column gap-2"
    >
      <div>
        <div>
          <div>
            <label
              className="block mb-1"
              htmlFor="root_title"
            >
              Titre 2
            </label>
            <input
              autoFocus={false}
              className="p-inputtext p-component w-full"
              disabled={false}
              id="root_title"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyPress={[Function]}
              placeholder=""
              readOnly={false}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div>
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <button
    className="p-button p-component mt-3"
    disabled={false}
    type="submit"
  >
    <span
      className="p-button-label p-c"
    >
      Submit
    </span>
  </button>
</form>
`;
